align the skill images correctly

--- a/main.css
+++ b/main.css
@@ -119,9 +119,10 @@ footer {
   align-content: center;
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-around;
   height: 300px;
   margin: 0;
+  padding: 0;
 }
 
 .skills li {
